--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding-top: 4rem;
+  margin: auto;
+  margin-top: 6rem;
+  background: rgb(184, 150, 137);
+  width: 60%;
+  min-height: 40vh;
+  border-radius: 16px;
+  box-shadow: -2px 3px 3px 5px rgb(27, 26, 26);
+  letter-spacing: 1px;
 }
