--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,28 @@
+.App {
+  background: rgb(164, 234, 242);
+  /* height: 100%; */
+  min-height: 100vh;
+  padding-bottom: 4rem;
+  padding-top: 2rem;
+}
 .numForm {
   text-align: center;
-  padding-top: 4rem;
-  margin: auto;
   margin-top: 6rem;
+  padding-top: 2rem;
+  height: 100%;
+  margin: auto;
   background: rgb(184, 150, 137);
   width: 60%;
   min-height: 40vh;
   border-radius: 16px;
   box-shadow: -2px 3px 3px 5px rgb(27, 26, 26);
   letter-spacing: 1px;
+}
+
+.container {
+  background: rgb(31, 18, 18);
+  color: gold;
+  border-radius: 16px;
+  /* min-height: 50vh; */
+  padding-top: 4px;
 }
